--- a/myInfo.html
+++ b/myInfo.html
@@ -7,8 +7,8 @@
 <body>
     <h1>My contact details</h1>
     <p>My fictional address</p>
-    <p>+38(097) 658 63 79</p>
-    <p>borysigorevich@gmail.com</p>
+    <p>+38(097) 777 77 77</p>
+    <p>borys@gmail.com</p>
     <form action="">
         <label>Your name:</label>
         <input type="text"><br>
