--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         <table cellspacing="20">
             <td><img src="Unknown.jpg" alt="None"></td>
             <td><h1>Boris</h1>
-                <p><em>I want to learn <strong>web development and earn</strong> <a href="https://rieltor.ua/ru/flats-sale/view/9673353/?utm_source=flatfy.ua&utm_medium=referral&utm_term=1bc6b92b-a92d-4d6a-a600-5ef568605cab&utm_campaign=external_rank_2" target="_blank">more money</a> and have a useful skill</em></p>
-                <p>The man who wants to learn <em><strong>front-end development</strong></em></p>
+                <p><em>Learingn web development</em></p>
             </td>
         </table>
         <hr>
@@ -28,11 +27,11 @@
                <tbody>
                     <tr>
                         <td>2011-2016</td>
-                        <td>CHNTU</td>
+                        <td>Study</td>
                     </tr>
                     <tr>
                         <td>2017-nowadays</td>
-                        <td>CEX.IO</td>
+                        <td>Secret</td>
                     </tr>
                </tbody>
         </table>
